fixed spacing on resizing

--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -72,7 +72,7 @@ h3 {
     background-color: rgb(56, 74, 106);
     color: white;
     border-radius: 0px;
-    margin: 0px 10px;
+    margin: 0px 10px 20px;
 }
 
 .custom-header {
